Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>

	* gnome-config.c (_gnome_config_get_float_with_default)
	  (_gnome_config_set_float): setlocae for LC_NUMERIC to "C" and
	  then back to original locale when reading and writing floats
	  so that we can read/write floats over different locales

	* gnome-score.c (gnome_get_score_file_name) (log_score): 
	  The same as above.  Fixes bugs #10404, #10257

2000-05-04  Jacob Berkman  <jacob@helixcode.com>

	* gnomelib-init.c (gnomelib_option_cb): patch from Red Hat RPMs to
	not start esd if it is disabled (changed to default to true, since
	that is what the sound capplet does)

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): if xalf is
	installed and GNOME_USE_XALF is in the environment, use it to start
	apps.
	(gnome_desktop_entry_launch_with_args): export the icon in the dentry
	if we aren't a KDE .desktop and X-GNOME-SetIcon is true

Sun Apr 30 22:44:55 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: when getting a bool, accept numbers as well, this
	  is a patch from HEAD.

2000-04-05  Miguel de Icaza  <miguel@gnu.org>

	* parse-path.cP (parse_path): Invert the private/regular.  Thank
	god for the test suite.

2000-04-03  Miguel de Icaza  <miguel@gnu.org>

	* gnome-fileconvert.c (gfc_read_FileConverters): Do not depend on
	initialization sequence to run.

	* parse-path.cP (parse_path): Do not depend on the initialization sequence

1999-08-26  Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

	* gnome-mime.c (add_to_key): Duplicate the mime key here.

Mon Mar 20 19:40:50 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: we don't need to check the default for "C" locale
	  if we check the default after the loop.  This is in fact more
	  correct.

	* gnome-dentry.c: when saving names and comments, save them to the
	  default (no language) first just in case there was no setting,
	  fixes first part of #7300

Mon Mar 20 18:35:32 2000  George Lebl <jirka@5z.com>
