@@ -1,3 +1,7 @@
+2000-05-06  Miguel de Icaza  <miguel@helixcode.com>
+
+	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): optimize.
+
 Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>
 
 	* gnome-config.c (_gnome_config_get_float_with_default)
